add notebook task 8

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -403,7 +403,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 8"
+    "## Task 8: Probability of a Difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating the probability that 1-day retention is greater when the gate is at level 30\n",
+    "prob = (boot_1d['diff']>0).mean()\n",
+    "\n",
+    "# Pretty printing the probability\n",
+    "# ... YOUR CODE FOR TASK 8 ...\n",
+    "print( \"{0:.0%}\".format(prob))"
    ]
   },
   {
